--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,3 +18,9 @@ services:
     restart: always
     ports:
       - 8080:8080
+
+  sakila:
+    image: sakiladb/mysql:8
+    restart: always
+    ports:
+      - 3306:3306
